# Fast-API-No-SQL-CRUD

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/server/: app.py  database.py
app/server/models/: student.py
app/server/routes/: student.py
