[tool.poetry]
name = "fast-api-no-sql-crud"
version = "0.1.0"
description = "Ejemplo de CRUD MongoDB con Fast API"
authors = ["cgarzon <gagocaan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = { version = "0.73.0", extras = ["all"] }
pydantic = { version = "1.9.0", extras = ["email"] }
motor = "^2.5.1"
ujson = "4.3.0"

[tool.poetry.dev-dependencies]
black = "21.12b0"
pytest = "6.2.5"
ipdb = "0.13.9"
ipython = "8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
