[tool.poetry]
name = "fast-api-no-sql-crud"
version = "0.1.0"
description = "Ejemplo de CRUD MongoDB con Fast API"
authors = ["cgarzon <gagocaan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.78.0"}
pydantic = {extras = ["email"], version = "^1.9.1"}
motor = "^3.0.0"
ujson = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | .venv
    | env
    | .env
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''
